src/components/github/SelectedRepos/SelectedRepos.css
.SelectedRepos {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.EmptyRepos {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1rem;
  padding: 2.5rem 2rem;
  font-size: 1.125rem;
  line-height: 1.35;
  font-weight: 400;
  color: var(--light);
  background-color: var(--background-dark);
  border-radius: 1rem;
}

.EmptyRepos-icon {
  width: 3rem;
  height: 3rem;
}

.RepoItem {
  position: relative;
  width: 100%;
  padding: 1rem 1.5rem;
  color: white;
  background-color: var(--background-darker);
  border-radius: 0.5rem;
  overflow: hidden;
}

.RepoItem-colorTag {
  position: absolute;
  top: 0;
  left: 0;
  width: 0.5rem;
  height: 100%;
  background-color: var(--green);
}

.RepoItem-name {
  position: relative;
  color: inherit;
  font-size: 1.125rem;
  font-weight: 700;
  text-decoration: none;
}

.RepoItem-name:hover {
  color: var(--blue);
  text-decoration: underline;
}

.RepoItem-bottom {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.775rem;
  font-weight: 400;
}

.RepoItem-owner {
  font-weight: 400;
  color: var(--light);
}

.RepoItem-commits {
  display: flex;
  align-items: center;
  gap: 0.25rem;
  font-weight: 700;
}

.RepoItem-commitsIcon {
  width: 0.75rem;
  height: 0.75rem;
  stroke-width: 1px;
}

.RepoItem-lastUpdatedAt {
  color: var(--light);
}

.RepoItem-deleteBtn {
  display: none;
  position: absolute;
  top: 50%;
  right: 1rem;
  transform: translateY(-50%);
  cursor: pointer;
}

.RepoItem-deleteBtn:hover {
  color: var(--red);
}

.RepoItem:hover .RepoItem-deleteBtn {
  display: block;
}

